syntax = "proto3";

package com.amazaar.Protobuff;

import "timePb.proto";
import "paymentPb.proto";
import "summaryPb.proto";
import "buyPb.proto";

message OrderedListPb{
    string parentOrderId = 4;
    TimePb time = 5;
    PaymentPbRef paymentRef = 6;
    DeliveryStatusEnum deliveryStatus = 7;
}

message OrderedListSearchReqPb {
    string orderParentId = 1;
    string customerId = 2;
}

message OrderedListSearchRespPb {
    SummaryPb summary = 1;
    repeated OrderedListPb orderListresults =2;
    repeated BuyPb buyListresults = 3;
}


